--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,6 +5,7 @@
     <!-- <link rel="icon" href="/vite.svg" /> KTP LOGO -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pledge App</title>
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
   </head>
   <body>
     <div id="root"></div>
